gl31-master/src/test/deca/syntax/invalid/sansobjet/while_condition.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 12 : Erreur: condition manquante
//
// Historique:
//    cree le 18/01/2021
{
    boolean b;

    while{
        print(b);
    }
}
